updated image URL

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="project">
                     <div class="project-image">
-                        <img src="/img/nutrition-app-preview.jpg">
+                        <img src="https://davidcarbn.github.io/portfolio/img/nutrition-app-preview.jpg">
                     </div>
                     <div class="project-info">
                         <div class="project-title margin-top-md margin-bottom-sm">
